theserverproject/src/pages/Home/components/Footer/Footer.css
/* Footer IDs  */
#footer {
    width: 100vw;
    height: var(--footer-height);
    background-color: var(--text-bg-color);
    display: flex;
    overflow: auto;
}

/* Footer Classes */
.footer-left-pane {
    display: flex;
    flex-direction: column;
    text-align: left;
    flex: 1 0;
    justify-content: center;
}

.footer-center-pane {
    display: flex;
    flex-direction: column;
    text-align: center;
    flex: 1 0;
}

.footer-right-pane {
    display: flex;
    flex-direction: column;
    text-align: right;
    flex: 1 0;
    justify-content: center;
}

.footer-text {
    color: var(--text-fg-color);
    margin: 0px;
    font-size: 13px;
}

.gh-logo {
    max-height: var(--footer-height);
    max-width: var(--footer-height);
    margin-right:30px; 
}

